Add δ.ε. χωριζομένων μεταβλητών

--- a/efarmosmena.html
+++ b/efarmosmena.html
@@ -446,10 +446,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toctitle">Περιεχόμενα</div>
 <ul class="sectlevel1">
 <li><a href="#_συντομογραφίες">Συντομογραφίες</a></li>
-<li><a href="#_βασικές_έννοιες">Βασικές έννοιες</a>
+<li><a href="#_παραπομπές">Παραπομπές</a></li>
+<li><a href="#_διαφορικές_εξισώσεις">Διαφορικές Εξισώσεις</a>
 <ul class="sectlevel2">
+<li><a href="#_βασικές_έννοιες">Βασικές έννοιες</a>
+<ul class="sectlevel3">
 <li><a href="#_γραμμικές_διαφορικές_εξισώσεις">Γραμμικές Διαφορικές Εξισώσεις</a></li>
 <li><a href="#_λύσεις_διαφορικών_εξισώσεων">Λύσεις Διαφορικών Εξισώσεων</a></li>
+</ul>
+</li>
+<li><a href="#_πρώτης_τάξης">Πρώτης Τάξης</a>
+<ul class="sectlevel3">
+<li><a href="#_χωριζομένων_μεταβλητών">Χωριζομένων μεταβλητών</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -465,10 +475,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <col style="width: 50%;">
 </colgroup>
 <tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">s2p5</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">slide 2, page 5</p></td>
-</tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Δ.Ε.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Διαφορική Εξίσωση</p></td>
@@ -490,8 +496,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
-<h2 id="_βασικές_έννοιες"><a class="anchor" href="#_βασικές_έννοιες"></a>Βασικές έννοιες</h2>
+<h2 id="_παραπομπές"><a class="anchor" href="#_παραπομπές"></a>Παραπομπές</h2>
 <div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Εφαρμοσμένα Μαθηματικά, Νικόλαος Τσίτσας</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_διαφορικές_εξισώσεις"><a class="anchor" href="#_διαφορικές_εξισώσεις"></a>Διαφορικές Εξισώσεις</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_βασικές_έννοιες"><a class="anchor" href="#_βασικές_έννοιες"></a>Βασικές έννοιες</h3>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Διαφορική εξίσωση</dt>
@@ -534,8 +554,17 @@ y^{(n)}=G(x,y,y',...,y^{(n-1)})
 \end{equation}\]
 </div>
 </div>
-<div class="sect2">
-<h3 id="_γραμμικές_διαφορικές_εξισώσεις"><a class="anchor" href="#_γραμμικές_διαφορικές_εξισώσεις"></a>Γραμμικές Διαφορικές Εξισώσεις</h3>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Πρόβλημα Αρχικών Τιμών</dt>
+<dd>
+<p>Σου δίνει αρχικές τιμές και πρέπει να βρεις τη <a href="#μερική-λύση">μερική λύση</a> χρησιμοποιώντας αυτές τις
+τιμές.</p>
+</dd>
+</dl>
+</div>
+<div class="sect3">
+<h4 id="_γραμμικές_διαφορικές_εξισώσεις"><a class="anchor" href="#_γραμμικές_διαφορικές_εξισώσεις"></a>Γραμμικές Διαφορικές Εξισώσεις</h4>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Γενική μορφή γραμμικής Δ.Ε.</dt>
@@ -561,14 +590,6 @@ a_n(x)y^{(n)}(x) + a_{(n-1)}(x)y^{(n-1)}(x) + ... + a_0(x)y(x) = f(x)
 <dt class="hdlist1">Σταθερών συντελεστών</dt>
 <dd>
 <p>Οι συντελεστές είναι σταθερές συναρτήσεις.</p>
-</dd>
-<dt class="hdlist1">Πρόβλημα Αρχικών Τιμών</dt>
-<dd>
-<p>Σου δίνει αρχικές τιμές και πρέπει να βρεις τη λύση χρησιμοποιώντας αυτές τις
-τιμές.</p>
-<div class="paragraph">
-<p>Δες <a href="#μερική-λύση">Μερική ή ειδική λύση</a></p>
-</div>
 </dd>
 </dl>
 </div>
@@ -613,8 +634,8 @@ a_n(x)y^{(n)}(x) + a_{(n-1)}(x)y^{(n-1)}(x) + ... + a_0(x)y(x) = f(x)
 </div>
 </div>
 </div>
-<div class="sect2">
-<h3 id="_λύσεις_διαφορικών_εξισώσεων"><a class="anchor" href="#_λύσεις_διαφορικών_εξισώσεων"></a>Λύσεις Διαφορικών Εξισώσεων</h3>
+<div class="sect3">
+<h4 id="_λύσεις_διαφορικών_εξισώσεων"><a class="anchor" href="#_λύσεις_διαφορικών_εξισώσεων"></a>Λύσεις Διαφορικών Εξισώσεων</h4>
 <div class="dlist">
 <dl>
 <dt class="hdlist1">Κλασσική λύση</dt>
@@ -684,7 +705,7 @@ y = y(x) = φ(x,c_1,...,c_n)
 <div class="title">Example 3. Π.Α.Τ.</div>
 <div class="content">
 <div class="paragraph">
-<p>s1p4</p>
+<p>p18</p>
 </div>
 </div>
 </div>
@@ -723,8 +744,114 @@ G(x,y,c_1,...,c_n)=0
 <div class="title">Example 4. Γενικό ολοκλήρωμα διαφορικής εξίσωσης</div>
 <div class="content">
 <div class="paragraph">
-<p>s1p3</p>
+<p>p17</p>
 </div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_πρώτης_τάξης"><a class="anchor" href="#_πρώτης_τάξης"></a>Πρώτης Τάξης</h3>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Δ.E. Πρώτης Τάξης</dt>
+</dl>
+</div>
+<div class="stemblock">
+<div class="content">
+\[\begin{equation}
+y'(x) = f(x,y(x))
+\end{equation}\]
+</div>
+</div>
+<div class="sect3">
+<h4 id="_χωριζομένων_μεταβλητών"><a class="anchor" href="#_χωριζομένων_μεταβλητών"></a>Χωριζομένων μεταβλητών</h4>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Δ.Ε. Χωριζομένων μεταβλητών ή διαχωρίσιμη Δ.Ε.</dt>
+</dl>
+</div>
+<div class="stemblock">
+<div class="content">
+\[\begin{equation}
+y'=g(x)h(y)
+\end{equation}\]
+</div>
+</div>
+<div class="paragraph">
+<p><strong>Μεθοδολογία</strong></p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Λύσε την εξίσωση \(h(y)=0\)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Οι λύσεις αυτής της εξίσωσης:</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Είναι σταθερές (\(y=ρ\))</p>
+</li>
+<li>
+<p>Αποτελούν λύσεις της Δ.Ε.</p>
+</li>
+<li>
+<p>Ονομάζονται <strong>ιδιάζουσες</strong>.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Για \(h(y) \neq 0\)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Διαίρεσε και τα δύο μέλη με την \(h(y)\)</p>
+</li>
+<li>
+<p>Ολοκλήρωσε ως προς \(x\)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Ισχύει \(y'=\frac{dy}{dx}\)</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+</ol>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<div class="title">🔥</div>
+</td>
+<td class="content">
+<div class="title">Π.Α.Τ.</div>
+<div class="paragraph">
+<p>Μας δίνεται αρχική τιμή \(y(x_0)=y_0\)</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Οι ιδιάζουσες λύσεις \(y=ρ\) δεν αποτελούν λύσεις του Π.Α.Τ. αν δεν είναι ίσες με τις αρχικές τιμές που μας δίνονται.</p>
+</li>
+<li>
+<p>Η λύση ενός Π.Α.Τ. πρέπει να ορίζεται σε ένα διάστημα που περιέχει το αρχικό σημείο \(x_0\).</p>
+</li>
+</ul>
+</div>
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
@@ -733,7 +860,7 @@ G(x,y,c_1,...,c_n)=0
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-09-09 01:43:03 +0300
+Last updated 2021-09-09 03:40:38 +0300
 </div>
 </div>
 <script type="text/x-mathjax-config">
